--- a/pages/navigation/clock/clock.wxml
+++ b/pages/navigation/clock/clock.wxml
@@ -1,2 +1,6 @@
-<!--pages/navigation/clock/clock.wxml-->
-<text>pages/navigation/clock/clock.wxml</text>
+<view class="page">
+        <view class="title">搜索垃圾</view>
+    <view class="page__bd">
+        <mp-searchbar bindselectresult="selectResult" search="{{search}}"></mp-searchbar>
+    </view>
+</view>
