--- a/pages/navigation/clock/clock.wxss
+++ b/pages/navigation/clock/clock.wxss
@@ -1,1 +1,12 @@
 /* pages/navigation/clock/clock.wxss */
+.title {
+  font-size: 34rpx;
+  margin-bottom: 10rpx;
+  padding: 30rpx;
+}
+
+.tip {
+  display: inline-block;
+  font-size: 10px;
+  color: cadetblue;
+}
